# Decision-Tree-Plus-Plus

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  UserManual.md  run  run.sh
.github/workflows/: ci.yml
Python-build/: bindings.cpp  demo.py  setup.py
Python-build/demo/: DemoClass.cpp  DemoClass.hpp  bindings.cpp  pythonDemo.py
Python-build/include/: DecisionTree.hpp  DecisionTreeNode.hpp  EvalTrainingData.hpp  TrainingDataGeneratorSymbolic.hpp  Utility.hpp
Python-build/src/: DecisionTree.cpp  DecisionTreeNode.cpp  EvalTrainingData.cpp
include/: Common.hpp  DTIntrospection.hpp  DecisionTree++.hpp  DecisionTree.hpp  DecisionTreeNode.hpp  EvalTrainingData.hpp  EvalTrainingData.hpp.gch  TrainingDataGeneratorNumeric.hpp  TrainingDataGeneratorSymbolic.hpp  TrainingDataGeneratorSymbolic.hpp.gch  Utility.hpp
src/: Classify.cpp  ConstructTree.cpp  DTIntrospection.cpp  DecisionTree.cpp  DecisionTreeNode.cpp  EntropyCalculators.cpp  EvalTrainingData.cpp  ProbabilityCalculators.cpp  TrainingDataGeneratorNumeric.cpp  TrainingDataGeneratorSymbolic.cpp  Utility.cpp  logger.cpp
src/python/: pythonDemo.py  setup.py  wrapper.cpp
test/: ClassifyTest.cpp  ConstructTreeTest.cpp  DecisionTree.py  DecisionTreeNodeTest.cpp  DecisionTreeTest.cpp  EntropyCalcTest.cpp  EntropyCalculatorsTest.cpp  EvalTrainingDataTest.cpp  GenerateTrainingDataNumericTest.cpp  IntrospectionTest.cpp  ProbCalcTest.cpp  Sandbox.cpp  Sandbox.py  TrainingDataGeneratorSymbolicTest.cpp  UtilityTest.cpp  __init__.py  pythonTest.py
test/resources/: param_numeric_out.txt  param_symbolic.txt  stage3cancer.csv  training_symbolic.csv  training_symbolic_large1.csv
